--- a/modules/ROOT/pages/deployment/wopi/wopi.adoc
+++ b/modules/ROOT/pages/deployment/wopi/wopi.adoc
@@ -2,12 +2,14 @@
 :toc: right
 :wopi_subdir: /ocis_wopi
 :download-gh-directory-url: https://download-directory.github.io
+:wopi-wiki-url: https://en.wikipedia.org/wiki/Web_Application_Open_Platform_Interface
+:wopi-ms-url: https://learn.microsoft.com/en-us/openspecs/office_protocols/ms-wopi/6a8bb410-68ad-47e4-9dc3-6cf29c6b046b
 
 :description: Infinite Scale uses the WOPI protocol to integrate office applications. This document describes the general flow and basic settings used.
 
 == Introduction
 
-{description} For more details on possible configuration values see the xref:conf-examples/office-integration.adoc[Office Integration] document at the configuration examples. 
+{description} For more details on possible configuration values see the xref:conf-examples/office-integration.adoc[Office Integration] document at the configuration examples. More information about the WOPI protocol can be found on {wopi-wiki-url}[Wikipedia,window=_blank] or {wopi-ms-url}[Microsoft,window=_blank].
 
 For the time being, the supported office applications are:
 
