--- a/modules/ROOT/pages/deployment/wopi/wopi.adoc
+++ b/modules/ROOT/pages/deployment/wopi/wopi.adoc
@@ -15,10 +15,11 @@ For the time being, the supported office applications are:
 
 * Collabora
 * OnlyOffice
+* Microsoft Office
 
 == General Information
 
-Infinite Scale can be configured to use office applications via a browser in an iframe. Depending on the use case and among other things, administrators can:
+Infinite Scale can be configured to use office applications as web application via a browser in an iframe using the WOPI protocol. Depending on the use case and among other things, administrators can:
 
 * provide multiple applications from different vendors in parallel,
 * define which icons are used for which applications,
@@ -26,11 +27,24 @@ Infinite Scale can be configured to use office applications via a browser in an 
 
 Configured applications can be selected by users when opening a document via the WebUI. The list of available applications to open a file show an icon and its app name.
 
-Office applications are :
+Office applications are:
 
 * provided via the xref:{s-path}/app-provider.adoc[App-Provider Service] because they are not able to register themself, see the xref:#wopi-coniguration-examples[docker-copmpose.yml] file. 
 
 * configured for use with the WebUI via the xref:{s-path}/app-registry.adoc[App-Registry Service]. Here, default office apps and their appearance in the list of available apps in the webUI are defined. For more information see the xref:#wopi-coniguration-examples[app-registry.yaml] file.
+
+{empty}
+[[special-ms-note]]
+Special note for Microsoft Office::
+--
+Microsoft distinguishes between two approaches running an Office Web Aplication farm which are:
+
+* Office Online Server running locally and
+* Office 365 using the Microsoft cloud
+
+While with Office Online Server required Microsoft licenses are handled locally, Office 365 has no information about a valid licensing. To proper handle licencing for Office 365, a mutual trusted proxy is used where communication between parties can only run via this proxy. The URL has to be added to the wopi server settings. Note that you will get a working URL from ownCloud Support post a written declaration that your company has an eligable Microsoft Business contract.
+--
+
 
 == WOPI Overview
 
