--- a/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
+++ b/modules/ROOT/pages/deployment/container/orchestration/orchestration.adoc
@@ -1,7 +1,4 @@
 = Container Orchestration
-
-NOTE: The following documentation serves as a starting point so that you can help yourself with your container orchestration setup for Infinite Scale. ownCloud Professional Services currently don't provide support for container orchestration. Please {contact-us-url}[contact us] if you are interested in receiving Professional Services for container orchestration.
-
 :toc: right
 :toclevels: 3
 
@@ -57,6 +54,8 @@ The pages
 give a brief overview of features and characteristics of both tools.
 
 For Kubernetes, ownCloud provides basic {helm-charts-ocis-url}[Helm Charts] that can be used and adjusted.
+
+NOTE: The following documentation serves as a starting point so that you can help yourself with your container orchestration setup for Infinite Scale. ownCloud Professional Services currently does not provide support for container orchestration. Please {oc-contact-url}[contact us] if you are interested in receiving Professional Services for container orchestration.
 
 == Docker Compose
 
