--- a/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
@@ -20,7 +20,7 @@ To use the postprocessing service, an event system needs to be configured for al
 
 == Postprocessing Functionality
 
-The storageprovider service (xref:deployment/services/s-list/storage-users.adoc[storage-users]) can be configured to initiate asynchronous postprocessing by setting the `STORAGE_USERS_OCIS_ASYNC_UPLOADS` environment variable to `true`. If this is the case, postprocessing will get initiated _after_ uploading a file and all bytes have been received.
+The storageprovider service (xref:{s-path}/storage-users.adoc[storage-users]) can be configured to initiate asynchronous postprocessing by setting the `STORAGE_USERS_OCIS_ASYNC_UPLOADS` environment variable to `true`. If this is the case, postprocessing will get initiated _after_ uploading a file and all bytes have been received.
 
 The `postprocessing` service will then coordinate configured postprocessing steps like scanning the file for viruses. During postprocessing, the file will be in a `processing state` where only a limited set of actions are available.
 
