--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -1,59 +1,59 @@
 * xref:index.adoc[Introduction]
 ** xref:quickguide/quickguide.adoc[Quick Guide]
-* Infinite Scale 
+* Infinite Scale Overview
 ** xref:architecture/architecture.adoc[Architecture and Concepts]
 ** xref:availability_scaling/availability_scaling.adoc[Availability and Scalability]
 ** xref:security/security.adoc[Security Aspects]
+* xref:deployment/index.adoc[Deployment]
 ** xref:prerequisites/prerequisites.adoc[Prerequisites]
-** xref:deployment/index.adoc[Deployment]
-*** xref:deployment/general/general-info.adoc[General Information]
-*** xref:deployment/general/ocis-init.adoc[The ocis init Command]
-*** xref:deployment/binary/binary-setup.adoc[Binary Setup]
-*** xref:deployment/container/container-setup.adoc[Container Setup]
-*** xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]
-*** xref:deployment/wopi/wopi.adoc[Office Applications using WOPI]
-*** xref:deployment/security/security.adoc[Securing oCIS]
-*** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
-*** xref:deployment/services/services.adoc[Services]
-**** General Information
-***** xref:deployment/services/deployment-considerations.adoc[Deployment Considerations]
-***** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
-***** xref:deployment/services/env-vars-special-scope.adoc[Environment Variables with Special Scope]
-***** xref:deployment/services/gateways.adoc[Gateways]
-***** xref:deployment/services/logging.adoc[Logging]
-***** xref:deployment/services/ports-used.adoc[Ports Used]
-***** xref:deployment/services/tls.adoc[Transport Layer Security]
-**** List of Services
-***** xref:deployment/services/s-list/app-provider.adoc[App Provider]
-***** xref:deployment/services/s-list/app-registry.adoc[App Registry]
-***** xref:deployment/services/s-list/audit.adoc[Audit]
-***** xref:deployment/services/s-list/auth-basic.adoc[Auth Basic]
-***** xref:deployment/services/s-list/auth-bearer.adoc[Auth Bearer]
-***** xref:deployment/services/s-list/auth-machine.adoc[Auth Machine]
-***** xref:deployment/services/s-list/frontend.adoc[Frontend]
-***** xref:deployment/services/s-list/gateway.adoc[Gateway]
-***** xref:deployment/services/s-list/graph.adoc[Graph]
-***** xref:deployment/services/s-list/groups.adoc[Groups]
-***** xref:deployment/services/s-list/idm.adoc[IDM]
-***** xref:deployment/services/s-list/idp.adoc[IDP]
-***** xref:deployment/services/s-list/nats.adoc[NATS]
-***** xref:deployment/services/s-list/notifications.adoc[Notification]
-***** xref:deployment/services/s-list/ocdav.adoc[OCDAV]
-***** xref:deployment/services/s-list/ocs.adoc[OCS]
-***** xref:deployment/services/s-list/postprocessing.adoc[Postprocessing]
-***** xref:deployment/services/s-list/proxy.adoc[Proxy]
-***** xref:deployment/services/s-list/search.adoc[Search]
-***** xref:deployment/services/s-list/settings.adoc[Settings]
-***** xref:deployment/services/s-list/sharing.adoc[Sharing]
-***** xref:deployment/services/s-list/store.adoc[Store]
-***** xref:deployment/services/s-list/storage-publiclink.adoc[Storage-Publiclink]
-***** xref:deployment/services/s-list/storage-shares.adoc[Storage-Shares]
-***** xref:deployment/services/s-list/storage-system.adoc[Storage-System]
-***** xref:deployment/services/s-list/storage-users.adoc[Storage-Users]
-***** xref:deployment/services/s-list/thumbnails.adoc[Thumbnails]
-***** xref:deployment/services/s-list/users.adoc[Users]
-***** xref:deployment/services/s-list/web.adoc[Web]
-***** xref:deployment/services/s-list/webdav.adoc[WebDAV]
+** xref:deployment/general/general-info.adoc[General Information]
+** xref:deployment/general/ocis-init.adoc[The ocis init Command]
+** xref:deployment/binary/binary-setup.adoc[Binary Setup]
+** xref:deployment/container/container-setup.adoc[Container Setup]
+** xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration]
+** xref:deployment/wopi/wopi.adoc[Office Applications using WOPI]
+** xref:deployment/security/security.adoc[Securing oCIS]
+** xref:deployment/nfs/nfs.adoc[Network File System Deployment]
+** xref:deployment/services/services.adoc[Services]
+*** General Information
+**** xref:deployment/services/deployment-considerations.adoc[Deployment Considerations]
+**** xref:deployment/services/env-var-note.adoc[Environment Variable Notes]
+**** xref:deployment/services/env-vars-special-scope.adoc[Environment Variables with Special Scope]
+**** xref:deployment/services/gateways.adoc[Gateways]
+**** xref:deployment/services/logging.adoc[Logging]
+**** xref:deployment/services/ports-used.adoc[Ports Used]
+**** xref:deployment/services/tls.adoc[Transport Layer Security]
+*** List of Services
+**** xref:deployment/services/s-list/app-provider.adoc[App Provider]
+**** xref:deployment/services/s-list/app-registry.adoc[App Registry]
+**** xref:deployment/services/s-list/audit.adoc[Audit]
+**** xref:deployment/services/s-list/auth-basic.adoc[Auth Basic]
+**** xref:deployment/services/s-list/auth-bearer.adoc[Auth Bearer]
+**** xref:deployment/services/s-list/auth-machine.adoc[Auth Machine]
+**** xref:deployment/services/s-list/frontend.adoc[Frontend]
+**** xref:deployment/services/s-list/gateway.adoc[Gateway]
+**** xref:deployment/services/s-list/graph.adoc[Graph]
+**** xref:deployment/services/s-list/groups.adoc[Groups]
+**** xref:deployment/services/s-list/idm.adoc[IDM]
+**** xref:deployment/services/s-list/idp.adoc[IDP]
+**** xref:deployment/services/s-list/nats.adoc[NATS]
+**** xref:deployment/services/s-list/notifications.adoc[Notification]
+**** xref:deployment/services/s-list/ocdav.adoc[OCDAV]
+**** xref:deployment/services/s-list/ocs.adoc[OCS]
+**** xref:deployment/services/s-list/postprocessing.adoc[Postprocessing]
+**** xref:deployment/services/s-list/proxy.adoc[Proxy]
+**** xref:deployment/services/s-list/search.adoc[Search]
+**** xref:deployment/services/s-list/settings.adoc[Settings]
+**** xref:deployment/services/s-list/sharing.adoc[Sharing]
+**** xref:deployment/services/s-list/store.adoc[Store]
+**** xref:deployment/services/s-list/storage-publiclink.adoc[Storage-Publiclink]
+**** xref:deployment/services/s-list/storage-shares.adoc[Storage-Shares]
+**** xref:deployment/services/s-list/storage-system.adoc[Storage-System]
+**** xref:deployment/services/s-list/storage-users.adoc[Storage-Users]
+**** xref:deployment/services/s-list/thumbnails.adoc[Thumbnails]
+**** xref:deployment/services/s-list/users.adoc[Users]
+**** xref:deployment/services/s-list/web.adoc[Web]
+**** xref:deployment/services/s-list/webdav.adoc[WebDAV]
 * Configuration Examples
 ** xref:conf-examples/office-integration.adoc[Office Integration]
 // *** xref:deployment/deployment/deployment_examples.adoc[Deployment Examples]
