--- a/modules/ROOT/pages/maintenance/backup.adoc
+++ b/modules/ROOT/pages/maintenance/backup.adoc
@@ -1,11 +1,13 @@
 = Backup
 :toc: right
 
-:description: Making a backup of Infinite Scale is an important task that should be done on a regular basis.
+:description: Making a backup of the Infinite Scale instance is an important task that should be done on a regular basis.
 
 == Introduction
 
 {description} This ensures that in case of issues, data can be restored from a backup.
+
+Though no backup strategies are covered, reading this document can add valuable information when creating a backup and restore strategy.
 
 == General Considerations
 
@@ -31,6 +33,8 @@ Keep in mind that you always have to back up all three data sets consistently:
 * user data ^1^
 
 (1) ... For POSIX-only setups, the location for user data and metadata is currently the same. When using S3, the location differs.
+
+As a rule of thumb, consider also to backup the Infinite Scale binary respectively the container used. This avoids difficulties when restoring the instance and possibly using an updated Infinite Scale version compared to the version used when backing up. Restoring and updating should always be different tasks.
 
 == Pure POSIX Setup
 
