--- a/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/postprocessing.adoc
@@ -8,7 +8,7 @@
 :no_second_tab: true
 :no_third_tab: true
 
-:description: The Infinite Scale postprocessing service handles the coordination of asynchronous postprocessing steps.
+:description: The Infinite Scale postprocessing service handles the coordination of asynchronous post-processing steps.
 
 == Introduction
 
@@ -16,29 +16,29 @@
 
 == General Prerequisites
 
-To use the post-processing service, an event system needs to be configured for all services. By default, Infinite Scale ships with a preconfigured `nats` service.
+To use the postprocessing service, an event system needs to be configured for all services. By default, Infinite Scale ships with a preconfigured `nats` service.
 
 == Post-Processing Functionality
 
-The storageprovider service (xref:{s-path}/storage-users.adoc[storage-users]) can be configured to initiate asynchronous postprocessing by setting the `STORAGE_USERS_OCIS_ASYNC_UPLOADS` environment variable to `true`. If this is the case, postprocessing will get initiated _after_ uploading a file and all bytes have been received.
+The storageprovider service (xref:{s-path}/storage-users.adoc[storage-users]) can be configured to initiate asynchronous post-processing by setting the `STORAGE_USERS_OCIS_ASYNC_UPLOADS` environment variable to `true`. If this is the case, post-processing will get initiated _after_ uploading a file and all bytes have been received.
 
-The `postprocessing` service will then coordinate configured postprocessing steps like scanning the file for viruses. During postprocessing, the file will be in a `processing state` where only a limited set of actions are available.
+The `postprocessing` service will then coordinate configured post-processing steps like scanning the file for viruses. During post-processing, the file will be in a `processing state` where only a limited set of actions are available.
 
-NOTE: The processing state excludes file accessability by users.
+NOTE: The processing state excludes file accessibility by users.
 
-When all postprocessing steps have completed successfully, the file will be made accessible for users.
+When all postprocessing steps have completed successfully, the file will be made accessible to users.
 
 == Additional Prerequisites for the postprocessing Service
 
-When postprocessing has been enabled, configuring any postprocessing step will require the requested services to be enabled and pre-configured. For example, to use the `virusscan` step, one needs to have an enabled and configured `antivirus` service. 
+Once post-processing has been enabled, configuring any post-processing step will require the requested services to be enabled and preconfigured. For example, to use the `virusscan` step, one needs to have an enabled and configured `antivirus` service.
 
 == Post-Processing Steps
 
-The post-processing service is individually configurable. This is achieved by allowing a list of post-processing steps to be performed in order of their appearance in the `POSTPROCESSING_STEPS` envvar. This envvar expects a comma-separated list of steps that will be executed. Currently known steps to the system are `virusscan` and `delay`. Custom steps can be added but need an existing target for processing.
+The postprocessing service is individually configurable. This is achieved by allowing a list of post-processing steps to be performed in order of their appearance in the `POSTPROCESSING_STEPS` envvar. This envvar expects a comma-separated list of steps that will be executed. Currently steps known to the system are `virusscan` and `delay`. Custom steps can be added but need an existing target for processing.
 
 === Virus Scanning
 
-To enable virus scanning as a post-processing step after uploading a file, the environment variable `POSTPROCESSING_STEPS` needs to contain the word `virusscan` at one location in the list of steps. As a result, each uploaded file gets virus-scanned as part of the post-processing steps. Note that the `antivirus service` must be enabled and configured for this to work.
+To enable virus scanning as a post-processing step after uploading a file, the environment variable `POSTPROCESSING_STEPS` needs to contain the word `virusscan` at one location in the list of steps. As a result, each uploaded file gets scanned for viruses as part of the post-processing steps. Note that the `antivirus service` must be enabled and configured for this to work.
 
 === Delay
 
@@ -46,7 +46,7 @@ Though this is for development purposes only and NOT RECOMMENDED on production s
 
 == Custom Post-Processing Steps
 
-By using the envvar `POSTPROCESSING_STEPS`, custom post-processing steps can be added. Any word can be used as step name but be careful not to conflict with existing keywords like `virusscan` and `delay`. In addition, if a keyword is misspelled or the corresponding service does either not exist or does not follow the necessary event communication, the post-processing service will wait forever to get the required response to proceed and therefore does not continue with any other processing.
+By using the envvar `POSTPROCESSING_STEPS`, custom post-processing steps can be added. Any word can be used as step name but be careful not to conflict with existing keywords like `virusscan` and `delay`. In addition, if a keyword is misspelled or the corresponding service either does not exist or does not follow the necessary event communication, the postprocessing service will wait forever to get the required response to proceed and therefore does not continue with any other processing.
 
 === Prerequisites
 
@@ -54,7 +54,7 @@ To use custom post-processing steps, you need a custom service listening to the 
 
 === Workflow
 
-When setting a custom post-processing step (eg. "customstep") the post-processing service will eventually send an event during post-processing. The event will be of the type StartPostprocessingStep with its field StepToStart set to "customstep". When the custom service receives this event, it can safely execute its actions. The post-processing service will wait until it has finished its work. The event contains further information (like filename, executing user, size, ...) and required tokens respectively URLs to download the file in case byte inspection is necessary.
+When setting a custom post-processing step (eg. "customstep") the postprocessing service will eventually send an event during post-processing. The event will be of the type StartPostprocessingStep with its field StepToStart set to "customstep". When the custom service receives this event, it can safely execute its actions. The post-processing service will wait until it has finished its work. The event contains further information (like filename, executing user, size, ...) and required tokens or URLs to download the file in case byte inspection is necessary.
 
 Once the custom service has finished its work, it should send an event of the type `PostprocessingFinished` via the configured event system. This event needs to contain a `FinishedStep` field set to "customstep". It also must contain the outcome of the step, which can be one of `delete` (abort post-processing, delete the file), `abort` (abort post-processing, keep the file) and `continue` (continue post-processing, this is the success case).
 
